
add_executable(no_sanitize_address_attribute_double_free no_sanitize_address_attribute_double_free.cc)
add_executable(no_sanitize_address_attribute_heap_buffer_overflow no_sanitize_address_attribute_heap_buffer_overflow.cc)
add_executable(no_sanitize_address_attribute_stack_use_after_return no_sanitize_address_attribute_stack_use_after_return.cc)
